Correct vertical alignment of select fields in edit panes
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@3917 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/classic/textpattern.css
+++ b/textpattern/theme/classic/textpattern.css
@@ -630,7 +630,9 @@ tr.spam td {
 }
 
 .edit-value input,
-.login-value input {
+.edit-value select,
+.login-value input,
+.login-value select {
 	margin-top: -.27272727272727em;
 	margin-bottom: -.27272727272727em;
 }
